--- a/src/main/resources/templates/Shipper_Admin.html
+++ b/src/main/resources/templates/Shipper_Admin.html
@@ -82,12 +82,14 @@
                             <h4 class="card-title ">List </h4>
                         </div>
                         <div class="card-body">
+                            <a href="/Create_Shipper" class="btn btn-primary">Create Shipper</a>
                             <div class="table-responsive">
                                 <table class="table">
                                     <thead class=" text-primary">
                                     <th scope="col">ID</th>
                                     <th scope="col">Name</th>
                                     <th scope="col">Price</th>
+                                    <th scope="col"></th>
                                     <th scope="col"></th>
                                     </thead>
                                     <tbody>
@@ -96,9 +98,9 @@
                                         <td th:text="${shipper.name}"></td>
                                         <td th:text="${shipper.price}"></td>
                                         <td>
-                                            <a th:href="@{'/Edit_Ship/' + ${shipper.id}}" th:text="Edit"></a>
-                                            <a th:href="@{'/delete/' + ${shipper.id}}" th:text="Delete"></a>
+                                            <a th:href="@{/edit_ship(id=${shipper.id})}"  th:text="Edit"></a>
                                         </td>
+                                        <td><a th:href="@{'/delete/' + ${shipper.id}}" title="delete" class="delete" onclick="return confirm('Are you sure you want to Delete?')" th:text="Delete"></a></td>
                                     </tr>
                                     </tbody>
                                 </table>
