--- a/src/main/resources/templates/updatenew.html
+++ b/src/main/resources/templates/updatenew.html
@@ -55,7 +55,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="detailed_description" class="bmd-label-floating">Detailed description</label>
-                                            <input type="text" name="detailed_description" th:field="${gameNew.detailed_description}" class="form-control">
+                                            <input type="text" name="detailed_description" th:field="${gameNew.description_detaile}" class="form-control">
                                         </div>
                                     </div>
                                 </div>
