--- a/src/main/resources/templates/productall.html
+++ b/src/main/resources/templates/productall.html
@@ -2,7 +2,6 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/adminlayout/template_admin.html}">
-<title>list category</title>
 
 <body >
 <div class="main-panel" layout:fragment="content">
@@ -18,7 +17,7 @@
                 <span class="navbar-toggler-icon icon-bar"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end">
-                <form method="post" th:action="@{/searchcategorys}" class="navbar-form col-md-4" style="float: right; margin-top: 30px">
+                <form method="post" th:action="@{/searchProducts}" class="navbar-form col-md-4" style="float: right; margin-top: 30px" th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
                     <div class="input-group no-border">
                         <input type="text" name="name" value="" class="form-control" placeholder="Search...">
                         <button type="submit" class="btn btn-white btn-round btn-just-icon">
@@ -76,31 +75,38 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header card-header-primary">
-                            <h4 class="card-title ">List </h4>
+                            <h4 class="card-title ">Product admin</h4>
                         </div>
                         <div class="card-body">
-                            <a href="/createcategory" class="btn btn-primary">Create Category</a>
                             <div class="table-responsive">
                                 <table class="table">
                                     <thead class=" text-primary">
                                     <th scope="col">ID</th>
                                     <th scope="col">Name</th>
-                                    <th scope="col"></th>
-                                    <th scope="col"></th>
+                                    <th scope="col">Image</th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col">Quantity</th>
+                                    <th scope="col">Description</th>
+                                    <th scope="col">CreatedAt</th>
+                                    <th scope="col">Category</th>
                                     </thead>
                                     <tbody>
-                                    <tr th:each="category : ${categorys}">
-                                        <th scope="row" th:text="${category.categoryid}"></th>
-                                        <td th:text="${category.name}"></td>
-                                        <td><a th:href="@{/updatecategory(id=${category.categoryid})}" th:text="Edit"></a></td>
-                                        <td><a th:href="@{/deletecategory(id=${category.categoryid})}" title="delete" class="delete" onclick="return confirm('Are you sure you want to Delete?')" th:text="Delete"></a></td>
+                                    <tr th:each="product : ${products}">
+                                        <th scope="row" th:text="${product.productid}"></th>
+                                        <td th:text="${product.name}"></td>
+                                        <td > <img th:src="@{${'/images/upload/' + product.images[0].name}}"height="50px"width="50px"></td>
+                                        <td th:text="${product.price}"></td>
+                                        <td th:text="${product.quantity}"></td>
+                                        <td th:text="${product.description}"></td>
+                                        <td th:text="${product.createdAt}"></td>
+                                        <td th:text="${product.category.name}"></td>
                                     </tr>
                                     </tbody>
                                 </table>
                                 <nav aria-label="Page navigation">
                                     <ul class="pagination">
                                         <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
-                                            <a class="page-link" th:href="@{/listcategory(size=${size}, page=${t})}" th:text="${t+1}"></a>
+                                            <a class="page-link" th:href="@{/listproduct(size=${size}, page=${t})}" th:text="${t+1}"></a>
                                         </li>
                                     </ul>
                                 </nav>
@@ -112,7 +118,6 @@
         </div>
     </div>
 </div>
-
 
 </body>
 
