--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12663,6 +12663,7 @@ button:focus {
     }
 
     .product-gallery-vertical .product-main-image {
+        margin: auto;
         flex: 0 0 80%;
         max-width: 80%
     }
