--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -59,7 +59,7 @@
                                 <div class="form-footer">
                                     <button type="submit" class="btn btn-outline-primary-2" value="Log In" name="login-submit">
                                         <span>LOG IN</span>
-                                        <i class="icon-long-arrow-right"></i>
+                                        <i class="las la-arrow-right"></i>
                                     </button>
 
                                     <div class="custom-control custom-checkbox">
@@ -101,7 +101,7 @@
                                 <div class="form-footer">
                                     <button type="submit" class="btn btn-outline-primary-2">
                                         <span>SIGN UP</span>
-                                        <i class="icon-long-arrow-right"></i>
+                                        <i class="las la-arrow-right"></i>
                                     </button>
 
                                     <div class="custom-control custom-checkbox">
