--- a/src/main/resources/templates/AdminIndex.html
+++ b/src/main/resources/templates/AdminIndex.html
@@ -68,7 +68,7 @@
     <div class="content">
         <div class="container-fluid">
             <div class="row" th:if="${#authorization.expression('hasAuthority(''USER'')')}">
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="card card-stats">
                         <div class="card-header card-header-warning card-header-icon">
                             <div class="card-icon">
@@ -79,9 +79,14 @@
                                 <small>$</small>
                             </h3>
                         </div>
+                        <div class="card-footer">
+                            <div class="stats">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="card card-stats">
                         <div class="card-header card-header-success card-header-icon">
                             <div class="card-icon">
@@ -92,43 +97,12 @@
                         </div>
                         <div class="card-footer">
                             <div class="stats">
-
+                                <a href="/listproduct">View product</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="card card-stats">
-                        <div class="card-header card-header-danger card-header-icon">
-                            <div class="card-icon">
-                                <i class="material-icons">assignment</i>
-                            </div>
-                            <p class="card-category">Order pending</p>
-                            <h3 class="card-title" th:text="${orderPaid}">75</h3>
-                        </div>
-                        <div class="card-footer">
-                            <div class="stats">
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="card card-stats">
-                        <div class="card-header card-header-info card-header-icon">
-                            <div class="card-icon">
-                                <i class="material-icons">fact_check</i>
-                            </div>
-                            <p class="card-category">Order done</p>
-                            <h3 class="card-title" th:text="${orderDone}">+245</h3>
-                        </div>
-                        <div class="card-footer">
-                            <div class="stats">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="card card-stats">
                         <div class="card-header card-header-warning card-header-icon">
                             <div class="card-icon">
@@ -144,6 +118,54 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="card card-stats">
+                        <div class="card-header card-header-danger card-header-icon">
+                            <div class="card-icon">
+                                <i class="material-icons">assignment</i>
+                            </div>
+                            <p class="card-category">Order pending</p>
+                            <h3 class="card-title" th:text="${orderPaid}">75</h3>
+                        </div>
+                        <div class="card-footer">
+                            <div class="stats">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="card card-stats">
+                        <div class="card-header card-header-info card-header-icon">
+                            <div class="card-icon">
+                                <i class="material-icons">fact_check</i>
+                            </div>
+                            <p class="card-category">Order done</p>
+                            <h3 class="card-title" th:text="${orderDone}">+245</h3>
+                        </div>
+                        <div class="card-footer">
+                            <div class="stats">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="card card-stats">
+                        <div class="card-header card-header-warning card-header-icon">
+                            <div class="card-icon">
+                                <i class="material-icons">assignment</i>
+                            </div>
+                            <p class="card-category">Total Order</p>
+                            <h3 class="card-title" th:text="${countOrder}">$34,245</h3>
+                        </div>
+                        <div class="card-footer">
+                            <div class="stats">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="row" th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
                 <div class="col-lg-3 col-md-6 col-sm-6">
@@ -157,7 +179,10 @@
                                 <small>$</small>
                             </h3>
                         </div>
-
+                        <div class="card-footer">
+                            <div class="stats">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
@@ -169,7 +194,11 @@
                             <p class="card-category">Product</p>
                             <h3 class="card-title" th:text="${products}">$34,245</h3>
                         </div>
-
+                        <div class="card-footer">
+                            <div class="stats">
+                                <a href="/productall">View product</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
@@ -178,10 +207,13 @@
                             <div class="card-icon">
                                 <i class="material-icons">assignment</i>
                             </div>
-                            <p class="card-category">Quantity User</p>
+                            <p class="card-category">Users</p>
                             <h3 class="card-title" th:text="${quantityUser}">75</h3>
                         </div>
-
+                        <div class="card-footer">
+                            <div class="stats">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
@@ -190,10 +222,13 @@
                             <div class="card-icon">
                                 <i class="material-icons">fact_check</i>
                             </div>
-                            <p class="card-category">Order done</p>
-                            <h3 class="card-title" th:text="${orderDone}">+245</h3>
+                            <p class="card-category">Revenue</p>
+                            <h3 class="card-title" th:text="${totalExtra}">+245</h3>
                         </div>
-
+                        <div class="card-footer">
+                            <div class="stats">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -246,7 +281,7 @@
                                 <th>Quantity</th>
                                 </thead>
                                 <tbody >
-                                <tr th:each="products : ${products}" style="text-align: center">
+                                <tr th:each="products : ${productcra }" style="text-align: center">
                                     <td th:text="${products.productid}">1</td>
                                     <td th:text="${products.name}">Dakota Rice</td>
                                     <td > <img th:src="@{${'/images/upload/' + products.images[0].name}}"height="50px"width="50px"></td>
