--- a/src/main/resources/templates/AdminIndex.html
+++ b/src/main/resources/templates/AdminIndex.html
@@ -68,7 +68,7 @@
     <div class="content">
         <div class="container-fluid">
             <div class="row" th:if="${#authorization.expression('hasAuthority(''USER'')')}">
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="card card-stats">
                         <div class="card-header card-header-warning card-header-icon">
                             <div class="card-icon">
@@ -153,10 +153,10 @@
                     <div class="card card-stats">
                         <div class="card-header card-header-warning card-header-icon">
                             <div class="card-icon">
-                                <i class="material-icons">account_balance_wallet</i>
+                                <i class="material-icons">assignment</i>
                             </div>
-                            <p class="card-category">Sale Money</p>
-                            <h3 class="card-title" th:text="${sumUserExtra}">$34,245</h3>
+                            <p class="card-category">Total Order</p>
+                            <h3 class="card-title" th:text="${countOrder}">$34,245</h3>
                         </div>
                         <div class="card-footer">
                             <div class="stats">
