--- a/src/main/resources/templates/createnew.html
+++ b/src/main/resources/templates/createnew.html
@@ -22,7 +22,7 @@
                             <p class="card-category">Create your </p>
                         </div>
                         <div class="card-body">
-                            <form method="post" th:action="@{/createnew}" th:object="${model}">
+                            <form method="post" th:action="@{/createnew}" th:object="${model}" enctype="multipart/form-data">
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
@@ -34,8 +34,13 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label for="image" class="bmd-label-floating">Image</label>
-                                            <input type="text" name="image" th:field="${model.image}" class="form-control">
+                                            <div class="form-group">
+                                                <div class="custom-file">
+                                                    <input type="file" class="custom-file-input" id="filename" name="file"
+                                                           accept="image/jpeg,image/png,image/jpg">
+                                                    <label class="custom-file-label" for="filename">Choose file</label>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
