--- a/src/main/resources/templates/cancel.html
+++ b/src/main/resources/templates/cancel.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>Payment Failure</h1>
-</body>
-</html>
+<div class="col-md-12">
+    <table class="text-left table-bordered" style="font-size: 1.2rem" >
+        <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Detail</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Message</td>
+            <td th:text="${message}"></td>
+        </tr>
+        <tr>
+            <td>Exception</td>
+            <td th:text="${exception}"></td>
+        </tr>
+        <tr>
+            <td>Trace</td>
+            <td th:text="${trace}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
