--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html xmlns='http://www.w3.org/1999/xhtml' xmlns:th='http://www.thymeleaf.org'>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/template.html}">
 <head>
-    <title>Result</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
+
 <body>
-<h3 th:if='${error}' th:text='${error}' style='color: red;'></h3>
-<div th:unless='${error}'>
-    <h3 style='color: green;'>Success!</h3>
-    <div>Id.: <span th:text='${id}' /></div>
-    <div>Status: <span th:text='${status}' /></div>
-    <div>Charge id.: <span th:text='${chargeId}' /></div>
-    <div>Balance transaction id.: <span th:text='${balance_transaction}' /></div>
+<div layout:fragment="content" class="text-center done" >
+    <h1><i class="las la-check-circle"></i></h1>
+    <h1>Thank You!</h1>
+    <p>Your order was successful.</p>
+    <p>You can check your order status <a href="/listorder">here</a> </p>
 </div>
-<a href='/checkout.html'>Checkout again</a>
 </body>
 </html>
