--- a/src/main/resources/templates/list_user.html
+++ b/src/main/resources/templates/list_user.html
@@ -38,6 +38,7 @@
                                     <th scope="col">Phone</th>
                                     <th scope="col">Email</th>
                                     <th scope="col">Address</th>
+                                    <th scope="col">Action</th>
                                     </thead>
                                     <tbody>
                                     <tr th:each="user:${users}">
@@ -47,6 +48,9 @@
                                         <td th:text="${user.phone}"></td>
                                         <td th:text="${user.email}"></td>
                                         <td th:text="${user.address}"></td>
+                                        <td>
+                                            <a th:href="@{/addfund(id=${user.id})}">Add fund</a>
+                                        </td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -64,42 +68,6 @@
             </div>
         </div>
     </div>
-
-    <footer class="footer">
-        <div class="container-fluid">
-            <nav class="float-left">
-                <ul>
-                    <li>
-                        <a href="https://www.creative-tim.com">
-                            Creative Tim
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://creative-tim.com/presentation">
-                            About Us
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://blog.creative-tim.com">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.creative-tim.com/license">
-                            Licenses
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="copyright float-right">
-                &copy;
-                <script>
-                    document.write(new Date().getFullYear())
-                </script>, made with <i class="material-icons">favorite</i> by
-                <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
-            </div>
-        </div>
-    </footer>
 </div>
 </body>
 </html>
